re PR c++/6949 (ICE in tsubst_decl, at cp/pt.c:5733)

PR c++/6949
	* decl2.c (grokfield): Create TEMPLATE_DECLs for methods in local
	classes.

	PR c++/6949
	* g++.dg/template/local3.C: New test.

From-SVN: r68817