gcc/testsuite/g++.dg/template/local3.C
@@ -1,0 +1,14 @@
+ template<class T>
+ void f(const T&)
+ {
+         struct B {
+	   
+                 void g (T);
+         };
+         B b;
+ };
+ void g()
+ {
+         f(42);
+ }
+ 
